# concourse-github-issue-resource

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
src/: concourse.rs  github_issue.rs  main.rs
