[package]
name = "concourse-github-issue"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab  = "0.28.0"
concourse-resource = "0.3"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
serde = "1.0.171"
serde_json = "1.0.103"
